<resources>
    <string name="app_name">Doggy Zone</string>
    <string name="logo_welcome">Welcome to Doggy Zone</string>
    <string name="sign_in_here">Please sign in to proceed</string>
    <string name="register_here">Please register details of your dog here. \nOwner details welcome.</string>
    <string name="register_button"><b>Register</b></string>
    <string name="email_hint">Enter your email here…</string>
    <string name="password_hint">Enter your password here…</string>
    <string name="confirm_password">Confirm your password here…</string>
    <string name="register_dog_name">Enter your dogs name here…</string>
    <string name="register_dog_age">Enter your dogs age here…</string>
    <string name="register_dog_breed">Enter your dogs breed here…</string>
    <string name="register_dog_color">Enter your dogs color here…</string>
    <string name="login_button_text"><b>Login</b></string>
    <string name="forgot_password">Have you forgotten your password?</string>
    <string name="register">Are you a new user? <b>Register here!</b></string>
    <string name="maps_logo">Doggy Zone Maps</string>
    <string name="maps_find_button">Search</string>
    <string name="google_maps_api_key">AIzaSyCig9wYwsVEKXGv40BD13fwlRiOg8GIsek</string>
    <string name="home_page_logo">Doggy Zone Home</string>
    <string name="dog_name_placeholder">Dog Name</string>
    <string name="not_available">N/A</string>
    <string name="dog_age_label">Age: </string>
    <string name="fname_hint">Enter your first name…</string>
    <string name="lname_hint">Enter last name here…</string>
    <string name="dog_breed_label">Breed: </string>
    <string name="dog_color_label">Color: </string>
    <string name="owner_name_label">Owner: </string>
    <string name="add_event_button_text">Add Appointment</string>
    <string name="event_details">Event details go here</string>
    <string name="add_event_welcome_label">Add Appointment</string>
    <string name="add_event_desc_label">Add the title, location, description, date and time for an appointment:</string>
    <string name="add_event_title_hint">Add a title for your appointment…</string>
    <string name="add_event_desc_hint">Add a description for your appointment…</string>
    <string name="add_event_location_hint">Add a location for your appointment…</string>
    <string name="add_event_all_day_label">All day:</string>
    <string name="add_event_start_time_label">Start Time:</string>
    <string name="add_event_end_time_label">End Time:</string>
    <string name="hour_label">HH</string>
    <string name="minute_label">MM</string>
    <string name="add_event_day_hint">AM/PM</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="save_button">Save</string>
    <string name="edit_profile_welcome_logo">Edit your profile</string>
    <string name="edit_profile_description">Edit your dogs details below:</string>
    <string name="event_title">Event Title</string>
    <string name="event_location">Event Location</string>
    <string name="event_date_label">Date:</string>
    <string name="event_all_day_options">Yes or no</string>
    <string name="event_date">DDMMYYYY</string>
    <string name="event_time">HHMM</string>
    <string name="add_to_event">Add to Event</string>
    <string name="marker_page_welcome">Marker Page</string>
    <string name="marker_page_name_label">Name:</string>
    <string name="marker_page_open_now">Open Now:</string>
    <string name="marker_page_address_label">Address:</string>
    <string name="marker_page_rating">Rating:</string>
    <string name="marker_page_user_ratings">Total User Ratings:</string>
    <string name="marker_page_welcome_description">View this location details:</string>

</resources>