<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white_background"
    app:layoutDescription="@xml/activity_login_main_scene"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:scaleType="centerInside"
        android:src="@drawable/dog_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_logo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/logo_welcome"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in_here"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/black"
            android:background="@drawable/edit_text_custom"
            android:drawableStart="@drawable/ic_baseline_email_blue"
            android:drawablePadding="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/black"
            android:background="@drawable/edit_text_custom"
            android:drawableStart="@drawable/ic_baseline_lock_open_blue"
            android:drawableEnd="@drawable/ic_baseline_visibility_blue"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:text="@string/login_button_text"
            android:textColor="@color/custom_white_background"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-70dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/highlight_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:alpha="1"
        android:background="@drawable/bottom_highlight_bar"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/register"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>